14.5/files/network-policy/10-front-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-policy  
spec:
  podSelector: 
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress #Разрешаем входящий трафик в frontend из backend
  ingress: 
  - from:
    - podSelector:
        matchLabels:
          app: backend
